@@ -77,5 +77,9 @@
     <img src="images/circle.png" class="image" alt="image 2">
     <img src="images/circle.png" class="image" alt="image 3">
 
+    <form method="get" class="form" action="form1"></form>
+    <form method="get" class="form" action="form2"></form>
+    <form method="get" class="form" action="form3"></form>
+
   </body>
 </html>
