@@ -459,6 +459,21 @@ module Druid
     end
 
     #
+    # Finds all forms that match the provided identifier
+    #
+    # @param [Hash] identifier how we find a form. You can use a multiple parameters
+    #  by combining of any of the following except xpath. The valid keys are:
+    #   * :class
+    #   * :id
+    #   * :index
+    #   * :xpath
+    #   * :action
+    #
+    def form_elements identifier
+      forms_for identifier.clone
+    end
+
+    #
     # Finds a list item
     #
     # @param [Hash] identifier how we find a list item. You can use a multiple parameters
